# 1code-rust

./: CHANGELOG.md  Cargo.toml  README.md
benches/: tests.rs
src/: de.rs  error.rs  lib.rs  ser.rs
