[package]
name = "onecode"
version = "0.1.0"
authors = ["humb1t"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "tests"
harness = false
